force-app/main/default/objects/ZRH_MaestroGlosas__c/ZRH_MaestroGlosas__c.object-meta.xml
<CustomObject>
    <label>Maestro de glosas</label>
    <nameField>
        <displayFormat>G-{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maestro de glosas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>