force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_ContenidoGlosa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ContenidoGlosa__c</fullName>
    <description>Donde se almacena todo el detalle de la Glosa</description>
    <label>Contenido de Glosa</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>