force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_ContieneTabla__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ContieneTabla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Contiene Tabla?</label>
    <type>Checkbox</type>
</CustomField>