force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_DestinoTipoPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DestinoTipoPDF__c</fullName>
    <description>Permite diferenciar a que PDF va asociada la glosa</description>
    <label>Destino tipo de PDF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D-001</fullName>
                <label>Póliza</label>
            </value>
            <value>
                <fullName>D-002</fullName>
                <label>Carta Oferta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>