force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_IDGlosa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IDGlosa__c</fullName>
    <label>ID Glosa</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>