force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_LogicaCondiciones__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LogicaCondiciones__c</fullName>
    <label>Lógica de Condiciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>