force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_Parametros__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Parametros__c</fullName>
    <description>Se especifican aquellos campos sobre los cuales hay que realizar validaciones o extraer datos para generar la glosa.</description>
    <label>Parámetros</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>