force-app/main/default/objects/ZRH_MaestroGlosas__c/fields/ZRH_Validaciones__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Validaciones__c</fullName>
    <description>En caso de tratarse de una Glosa Condicional, es necesario especificar las condiciones que debe validar SalesForce para determinar en que caso se incorpora dicha glosa.</description>
    <label>Validaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>