force-app/main/default/objects/ZRH_MaestroGlosas__c/validationRules/ZRH_ValidacionLogica.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionLogica</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(ZRH_TipoDeGlosa__c) == &quot;G-002&quot;,  TEXT( ZRH_LogicaCondiciones__c ) = null)</errorConditionFormula>
    <errorDisplayField>ZRH_LogicaCondiciones__c</errorDisplayField>
    <errorMessage>Por el tipo de glosa debe llenar este campo</errorMessage>
</ValidationRule>