force-app/main/default/objects/ZRH_MaestroGlosas__c/listViews/ZRH_GlosasCondicionales.listView-meta.xml
<ListView>
    <fullName>ZRH_GlosasCondicionales</fullName>
    <columns>NAME</columns>
    <columns>ZRH_IDGlosa__c</columns>
    <columns>ZRH_TipoDeGlosa__c</columns>
    <columns>ZRH_Activo__c</columns>
    <columns>ZRH_DestinoTipoPDF__c</columns>
    <columns>ZRH_Titulo__c</columns>
    <columns>ZRH_ContenidoGlosa__c</columns>
    <columns>ZRH_Plan__c</columns>
    <columns>ZRH_LocalizacionCondicionado__c</columns>
    <columns>ZRH_Parametros__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ZRH_TipoDeGlosa__c</field>
        <operation>equals</operation>
        <value>G-002</value>
    </filters>
    <label>Glosas Condicionales</label>
</ListView>